--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -526,10 +526,10 @@ body {
   text-decoration: none;
 }
 .reader-content .item-publication-date {
-  color: #bdbdbd;
+  color: #5A5A5A;
 }
 .reader-content .item-read_count {
-  color: #bdbdbd;
+  color: #5A5A5A;
 }
 .reader-content .item-short-content {
   color: #212121;
