--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -49,15 +49,15 @@
             <h5 class="">{{ _('Edit profile') }}</h5>
             <a title="profile" href="{{ url_user_profile({'user_id':user.id}) }}"><i
                     class="fa fa-user fa-2x"></i></a>
-            <a title="setings" href="{{ url_user_profile({'user_id':user.id}) }}"><i
-                    class="fa fa-cog fa-2x"></i></a>
+            <!--<a title="setings" href="{{ url_user_profile({'user_id':user.id}) }}"><i
+                    class="fa fa-cog fa-2x"></i></a>-->
         </div>
 
 
         <div class="row">
             <!-- <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}"><br> -->
 
-            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 profile-thumbnail">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-8 profile-thumbnail">
                         <div ng-model="data.image"
                              pr-crop
                              pr-crop-aspect="0.33"
@@ -68,7 +68,7 @@
             </div>
 
 
-            <form class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
+            <form class="col-lg-8 col-md-8 col-sm-8 col-xs-12 edit-grup">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Your display name') }}</span>
                     <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="name"
