--- a/profapp/templates/front/forester/head.html
+++ b/profapp/templates/front/forester/head.html
@@ -29,6 +29,7 @@
 <link rel="stylesheet" href="//static.profireader.com/static/css/oles.css">
 <link href="//static.profireader.com/static/css/article.css" rel="stylesheet">
 <link href="//static.profireader.com/static/front/bird/css/article.css" rel="stylesheet">
+<link href="//static.profireader.com/static/front/bird/css/style.css" rel="stylesheet">
 
 
 <script src="//static.profireader.com/static/jquery/jquery.min.js"></script>
