--- a/profapp/templates/front/forester/subportal_nav.html
+++ b/profapp/templates/front/forester/subportal_nav.html
@@ -1,24 +1,22 @@
 <div class="collapse navbar-collapse subportal" id="bs-example-navbar-collapse-1">
 
-        <div class="subportal-cover">
+    <div class="subportal-cover">
         <img src="{{ fileUrl(member_company['logo_file_id']) }}"/>
-{#        {{ member_company['short_description']|safe }}#}
-        </div>
-
-
+        {#        {{ member_company['short_description']|safe }}#}
+    </div>
 
 
     <ul class="nav navbar-nav">
 
-        <li><a {% if current_subportal_division_name == 'index' %}id="navigation_selected_division"{% endif %} href="{{ url_for('front.subportal',
+        <li {% if current_subportal_division_name == 'index' %}class="active"{% endif %}><a href="{{ url_for('front
+        .subportal',
                                    member_company_id = member_company['id'] ,
                                    member_company_name = member_company['name']) }}">{{ _('About') }}</a></li>
 
         {% for division in portal.divisions %}
             {% if division.portal_division_type_id == 'news' or division.portal_division_type_id == 'events' %}
-                <li>
-                    <a {% if current_subportal_division and division.id == current_subportal_division.id %}id="navigation_selected_division"{% endif %}
-                       href="{{ url_for('front.subportal_division',
+                <li {% if current_subportal_division and division.id == current_subportal_division.id %}class="active"{% endif %}>
+                    <a href="{{ url_for('front.subportal_division',
                                    member_company_id = member_company['id'] ,
                                    member_company_name = member_company['name'],
                                    division_name=division.name, page=1, search_text='') }}">{{ division.name }}</a>
@@ -26,10 +24,11 @@
             {% endif %}
         {% endfor %}
 
-        <li><a {% if current_subportal_division_name == 'address' %}id="navigation_selected_division"{% endif %} href="{{ url_for('front.subportal_address',
+        <li {% if current_subportal_division_name == 'address' %}class="active"{% endif %}><a href="{{ url_for
+        ('front.subportal_address',
                                    member_company_id = member_company['id'] ,
                                    member_company_name = member_company['name']) }}">{{ _('Address') }}</a></li>
-        <li><a {% if current_subportal_division_name == 'contacts' %}id="navigation_selected_division"{% endif %} href="{{ url_for('front.subportal_contacts',
+        <li {% if current_subportal_division_name == 'contacts' %}class="active"{% endif %}><a href="{{ url_for('front.subportal_contacts',
                                    member_company_id = member_company['id'] ,
                                    member_company_name = member_company['name']) }}">{{ _('Contacts') }}</a></li>
     </ul>
