--- a/profapp/templates/general/user_profile.html
+++ b/profapp/templates/general/user_profile.html
@@ -60,7 +60,7 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 line-user-info">{{ _('Birthday:') }}</div>
-                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">{{ moment(user.birth_tm).format('L') }}</div>
+                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">{{ moment(user.birth_tm).format('DD/MM/YYYY') }}</div>
                         </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 line-user-info">{{ _('Gender:') }}</div>
