--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -69,7 +69,7 @@
             <form class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Your display name') }}</span>
-                    <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="name"
+                    <input pr-validation-answer="data_validation:user.name" class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="name"
                            ng-model="data.user.profireader_name">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
