--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -55,21 +55,15 @@
 
 
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail">
-                        <div ng-model="data.image"
-                             apr-crop
-                             pr-crop-aspect="0.33"
-                             pr-crop-upload
-                             pr-crop-default-company-id="company_id"
-                             pr-crop-nothing-selected="//static.profireader.com/static/front/img/profi.png"
-                             pr-crop-urls="//static.profireader.com/static/front/img/profi.png"></div>
-
+                        <div ng-model="data.avatar" pr-crop></div>
             </div>
 
 
             <form class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Your display name') }}</span>
-                    <input pr-validation-answer="data_validation:user.name" class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="name"
+                    <input pr-validation-answer="data_validation:user.profireader_name" class="form-control"
+                           aria-describedby="sizing-addon1" type="text" placeholder="name"
                            ng-model="data.user.profireader_name">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
