user validation, user avatar

--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -11,7 +11,7 @@
 
             $scope.url_user_profile = {{ raw_url_for('user.profile')| safe }};
             $scope.save_user_profile = {{ raw_url_for('user.edit_profile')| safe }}
-            $scope.url_user_setings = {{ raw_url_for('user.profile')| safe}};
+                    $scope.url_user_setings = {{ raw_url_for('user.profile')| safe}};
 
 
             $scope.data = {};
@@ -37,108 +37,109 @@
 
     {% raw %}
     <div ng-controller="edit_user" class="container">
-    <div af
-         af-after-save="afterSave"
-         af-amid-load="amidLoad" class="edit_user_profile" ng-model="data">
-        <div class="row link-page">
-            <h5 class="">{{ _('Edit profile') }}</h5>
-            <a ng-if="data.user" title="profile" href="{{ data.user?url_user_profile({'user_id': data.user.id}):'' }}"><i
-                    class="fa fa-user fa-2x"></i></a>
-            <a ng-if="0 && data.user" title="setings" href="{{ data.user?url_user_profile({'user_id': data.user.id}):'' }}"><i
-                    class="fa fa-cog fa-2x"></i></a>
-        </div>
-
-
-        <div class="row">
-            <!-- <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}"><br> -->
-
-
-
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail">
-                        <div ng-model="data.avatar" pr-crop></div>
+        <div af
+             af-after-save="afterSave"
+             af-amid-load="amidLoad" class="edit_user_profile" ng-model="data">
+            <div class="row link-page">
+                <h5 class="">{{ _('Edit profile') }}</h5>
+                <a ng-if="data.user" title="profile"
+                   href="{{ data.user?url_user_profile({'user_id': data.user.id}):'' }}"><i
+                        class="fa fa-user fa-2x"></i></a>
+                <a ng-if="0 && data.user" title="setings"
+                   href="{{ data.user?url_user_profile({'user_id': data.user.id}):'' }}"><i
+                        class="fa fa-cog fa-2x"></i></a>
             </div>
 
 
-            <form class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your display name') }}</span>
-                    <input pr-validation-answer="data_validation:user.profireader_name" class="form-control"
-                           aria-describedby="sizing-addon1" type="text" placeholder="name"
-                           ng-model="data.user.profireader_name">
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your email') }}</span>
-                    <input class="form-control" aria-describedby="sizing-addon1" type="text" disabled="disabled"
-                           placeholder="youremail@example.com" ng-model="data.user.profireader_email">
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name') }}</span>
-                    <input pr-validation-answer class="form-control" aria-describedby="sizing-addon1" type="text"
-                           placeholder="first name" ng-model="data.user.profireader_first_name">
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your last name') }}</span>
-                    <input pr-validation-answer class="form-control" aria-describedby="sizing-addon1" type="text"
-                           placeholder="last name"
-                           ng-model="data.user.profireader_last_name">
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Birthday') }}</span>
-                    <input class="form-control" pr-datepicker="" ng-model="data.user.birth_tm"
-                           aria-describedby="sizing-addon1" type="date"
-                           placeholder="birthday"/>
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Gender') }}</span>
-                    <input type="radio" id="male" ng-model="data.user.profireader_gender" ng-value="'male'">
-                    <label for="male">{{ _('Male') }}</label>
-                    <input type="radio" id="female" ng-model="data.user.profireader_gender" ng-value="'female'">
-                    <label for="female">{{ _('Female') }}</label>
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Language') }}</span>
-                    <select id="language" style="width: 150px"
-                            ng-options="option.name as option.display for option in languages"
-                            ng-model="data.user.lang"></select>
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your web-page') }}</span>
-                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
-                           placeholder="www.your.webpage.com" name="link" ng-model="data.user.profireader_link">
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your country') }}</span>
+            <div class="row">
+                <!-- <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}"><br> -->
 
-                    <select id="country" style="width: 150px"
-                            ng-options="country.value as country.name for country in countries"
-                            ng-model="data.user.country"></select>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail">
+                    <div ng-model="data.avatar" pr-crop></div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Phone') }}</span>
-                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
-                           placeholder="your phone" ng-model="data.user.profireader_phone">
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Location') }}</span>
-                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
-                           placeholder="your city" ng-model="data.user.location">
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('About me') }}</span>
+
+
+                <form class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your display name') }}</span>
+                        <input pr-validation-answer="data_validation:profireader_name" class="form-control"
+                               aria-describedby="sizing-addon1" type="text" placeholder="name"
+                               ng-model="data.user.profireader_name">
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your email') }}</span>
+                        <input class="form-control" aria-describedby="sizing-addon1" type="text" disabled="disabled"
+                               placeholder="youremail@example.com" ng-model="data.user.profireader_email">
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name') }}</span>
+                        <input pr-validation-answer="data_validation:profireader_first_name" class="form-control" aria-describedby="sizing-addon1" type="text"
+                               placeholder="first name" ng-model="data.user.profireader_first_name">
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your last name') }}</span>
+                        <input pr-validation-answer="data_validation:profireader_last_name" class="form-control" aria-describedby="sizing-addon1" type="text"
+                               placeholder="last name"
+                               ng-model="data.user.profireader_last_name">
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Birthday') }}</span>
+                        <input class="form-control" pr-datepicker="" ng-model="data.user.birth_tm"
+                               aria-describedby="sizing-addon1" type="date"
+                               placeholder="birthday"/>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Gender') }}</span>
+                        <input type="radio" id="male" ng-model="data.user.profireader_gender" ng-value="'male'">
+                        <label for="male">{{ _('Male') }}</label>
+                        <input type="radio" id="female" ng-model="data.user.profireader_gender" ng-value="'female'">
+                        <label for="female">{{ _('Female') }}</label>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Language') }}</span>
+                        <select id="language" style="width: 150px"
+                                ng-options="option.name as option.display for option in languages"
+                                ng-model="data.user.lang"></select>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your web-page') }}</span>
+                        <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                               placeholder="www.your.webpage.com" name="link" ng-model="data.user.profireader_link">
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your country') }}</span>
+
+                        <select id="country" style="width: 150px"
+                                ng-options="country.value as country.name for country in countries"
+                                ng-model="data.user.country"></select>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Phone') }}</span>
+                        <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                               placeholder="your phone" ng-model="data.user.profireader_phone">
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Location') }}</span>
+                        <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                               placeholder="your city" ng-model="data.user.location">
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('About me') }}</span>
                         <textarea class="form-control" style="height: 100px;" aria-describedby="sizing-addon1"
-                                  type="text" name="about" placeholder="Give us some information about you please" rows="8"
+                                  type="text" name="about" placeholder="Give us some information about you please"
+                                  rows="8"
                                   cols="40" ng-model="data.user.about_me"></textarea>
-                </div>
-                <div class="item">
-                    <button class="btn btn-default save-profile pull-right
+                    </div>
+                    <div class="item">
+                        <button class="btn btn-default save-profile pull-right
                         border-radius"
-                            type="button" ng-click="$af.save(data)"
-                            ng-disabled="!$af.isActionAllowed(data, 'save') ">Save profile
-                    </button>
-                </div>
-            </form>
-
-
+                                type="button" ng-click="$af.save(data)"
+                                ng-disabled="!$af.isActionAllowed(data, 'save') ">Save profile
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
     {% endraw %}
