--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -638,12 +638,16 @@ body {
   border-radius: 3px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
   border: 1px solid #f5f5f5;
-  background-color: #EAEAEA;
+  background-color: rgba(253, 253, 253, 0.58);
 }
 .profile-window .avatar-user {
-  display: block;
+  margin-top: 15px;
+}
+.profile-window .avatar-user img {
+  vertical-align: middle;
+  width: 45%;
   margin: 0 auto;
-  width: 135px;
+  display: block;
 }
 .profile-window h3 {
   text-align: center;
