--- a/profapp/templates/company/companies_partners.html
+++ b/profapp/templates/company/companies_partners.html
@@ -14,10 +14,12 @@
 
     <script>
     module.controller('company_partners', ['$scope', '$ok', '$sce', function ($scope, $ok, $sce)  {
-        angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_partners')
+        angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_partners');
+        $scope.$$translate = {{translates('company_partners') | safe}};
         $scope.url_companies_partners = '{{ url_for('portal.companies_partners_load', company_id=company.id)
          }}';
         $scope.url_company_partner_details = {{ raw_url_for('portal.company_partner_update')| safe}};
+        $scope.url_change_status = {{ raw_url_for('portal.portals_partners_change_status')|safe }};
 
         {% raw %}
 
@@ -25,12 +27,26 @@
             return 'http://' + link;
         };
 
+        $scope.grid_action = function (id, action, row, column_name) {
+            if(row.actions[action] == true){
+                return $ok($scope.url_change_status({company_id:$scope.company_id, portal_id:row.portal.id}) ,{action:action}, function(resp){}).finally(function () {
+                    $scope.gridApi.grid.setGridData();
+                })
+            }else{
+                add_message(row.actions[action], 'danger', 3000)
+            }
+        };
+
         $scope.gridOptions1 = $.extend({}, $scope.gridOptions, {
                         urlLoadGridData: $scope.url_companies_partners,
                         columnDefs: [
                              {name: 'member.company.name', type: 'link',img:'member.company.logo_file_id', href: 'url_company_partner_details({employeer_id: row.entity.company_id,member_id:row.entity.member.company.id})'},
                              {name: 'member.status', filter: {type: 'multi_select',default_selected:true}},
-                             {name: 'member.rights', width: '500', type: 'icons', afilter: {type: 'input'}}
+                             {name: 'member.rights', width: '200', type: 'icons', afilter: {type: 'input'}},
+                             {name: 'actions', width: '*', type: 'actions', onclick: 'grid_action', classes: function (id,
+                                                                     entity, field) {
+                                return entity.status !== 'ACTIVE' ? 'non-active' : '';
+                            }}
                         ]
                     });
         {% endraw %}
