--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -135,19 +135,13 @@
                 </div>
             </div>
         </div>
-        <div pr-test="CompanyList" class="row company-list">
-
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 link-page"><h5 ng-if="data.companies">{{ _('Your company list:')
-                }}</h5>
-                <h2 ng-if="!data.companies && !loading">You haven't got any company yet!Create own or join to!</h2>
-            </div>
-
-            <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-6"
-                 ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
-                <div pr-test="CompanyThumbnail" class="thumbnail company-thumbnail">
-                    <a pr-test="CompanyUrl" href="{{ url_company_profile({company_id: my_employer.id}) }}">
-                        <img pr-image="my_employer.logo_file_id" alt="image" style="width: 100%">
+        <div ng-if="data_search.company_list.length>0 && !data_search.end" class="show-more"><h4><a class="link" ng-click="show_more()">{{ _('Show more search results') }}</a></h4></div>
+        <div class="row company-list">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3 ng-if="data.companies">Your company list:</h3><h2 ng-if="!data.companies && !loading">You haven't got any company yet!Create own or join to!</h2></div>
+            <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-6" ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
+                <div class="thumbnail company-thumbnail" >
+                    <a href="{{ url_company_profile({company_id: my_employer.id}) }}">
+                        <img pr-image="my_employer.logo_file_id" alt="image" style="width: 100%" >
                     </a>
                     <div pr-test="SomeCompanyInfo" class="caption some-company-info">
 
